# runtime

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  protocol-release.yml  runtime-ci.yml
crates/coordinator/: Cargo.toml
crates/coordinator/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: journal.rs  lib.rs  runtime.rs  store.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: journal.rs  lib.rs  lock.rs  store.rs
crates/postgres/tests/: postgres.rs
crates/processor/: Cargo.toml
crates/processor/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
deploy/: README.md  docker-compose.yml
migrations/: 0001_runtime_storage.sql  README.md
proto/: Cargo.toml  README.md  buf.gen.go.yaml  buf.yaml  build.rs
proto/agnt5/protocol/v2/: README.md  capabilities.proto  common.proto  component.proto  dispatch.proto  durable.proto  endpoint.proto  errors.proto  event.proto  execution.proto  execution_options.proto  payload.proto  run_policy.proto  state.proto  trigger.proto  worker.proto
proto/agnt5/protocol/v2/spec/: capabilities.json  compatibility.json  declarations.md  error-mapping.json  lifecycle.md  protocol-lock.schema.json  sdk-synchronization.md  transports.md
proto/agnt5/runtime/v1/: admin.proto  query.proto
proto/api/v1/: engine.proto  runtime.proto
proto/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: main.rs
scripts/: build-protocol-artifacts.sh
tests/conformance/: README.md
tests/conformance/v2/fixtures/: component-descriptor-v1.json  endpoint-signature-v1.json  payload-transfer-v1.json
tests/crash-recovery/: README.md
