[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/postgres",
    "crates/processor",
    "crates/coordinator",
    "crates/gateway",
    "crates/telemetry",
    "runtime",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["AGNT5 Team"]
license = "Apache-2.0"
repository = "https://github.com/agnt5/runtime"
rust-version = "1.97"

[workspace.dependencies]
agnt5-core = { path = "crates/core" }
agnt5-postgres = { path = "crates/postgres" }
agnt5-processor = { path = "crates/processor" }
agnt5-coordinator = { path = "crates/coordinator" }
agnt5-gateway = { path = "crates/gateway" }
agnt5-telemetry = { path = "crates/telemetry" }
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
