[package]
name = "agnt5-proto"
description = "SDK-compatible protobuf contract for AGNT5 Runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = ["crates-io"]
include = [
    "agnt5/**",
    "api/**",
    "src/**",
    "build.rs",
    "README.md",
    "buf.yaml",
]

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[features]
default = []
# Transitional worker surface used only while the community runtime migrates.
legacy-api = []
# Community query and admin APIs. SDK consumers do not enable this feature.
runtime-api = []

[build-dependencies]
protobuf-src = "2"
tonic-prost-build = "0.14"
