[package]
name = "agnt5-proto"
description = "SDK-compatible protobuf contract for AGNT5 Runtime"
# Protocol artifacts version independently from the runtime binary. One value
# is shared by the Rust crate, nested Go module tag, descriptor, and lock.
version = "0.1.0-alpha.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/agnt5-proto"
keywords = ["agents", "workflow", "protobuf", "grpc", "durable"]
categories = ["api-bindings", "network-programming"]
publish = ["crates-io"]
include = [
    "agnt5/**",
    "api/**",
    "src/**",
    "build.rs",
    "README.md",
    "buf.yaml",
]

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[features]
default = []
# Transitional worker surface used only while the community runtime migrates.
legacy-api = []
# Community query and admin APIs. SDK consumers do not enable this feature.
runtime-api = []

[build-dependencies]
protobuf-src = "2"
tonic-prost-build = "0.14"
