[package]
name = "agnt5-coordinator"
description = "Single-runtime worker coordination for AGNT5"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agnt5-core.workspace = true

