[package]
name = "agnt5-coordinator"
description = "Single-runtime worker coordination for AGNT5"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agnt5-core.workspace = true
agnt5-processor.workspace = true
agnt5-proto = { workspace = true, features = ["legacy-api"] }
bytes.workspace = true
prost-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true
